--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/express": "^4.17.9",
     "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.0.0",
     "typescript": "^4.1.2"
   }
 }
