--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
-    "knex:seed" : "knex --knexfile knexfile.ts seed:run",
-    "knex:migrate" : "knex --knexfile knexfile.ts migrate:latest"
+    "knex:seed": "knex --knexfile knexfile.ts seed:run",
+    "knex:migrate": "knex --knexfile knexfile.ts migrate:latest"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.0.0",
